k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stock-status
  labels:
    name: stock-status
    environment: production
